# lighthouse

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  lit.cfg.py  precommit.sh  pyproject.toml
.github/workflows/: examples.yml  lint.yml  precommit.yml
examples/KernelBench/: README.md  ci.yaml  level1.yaml  level3.yaml  test-kernel-bench.py
examples/cpu/x86/: matmul.py
examples/end-to-end/KernelBench/: README.md  bufferization.yaml  cpu_matmul.yaml  cpu_matmul_bf16.yaml  cpu_matmul_fp32.yaml  kernel_bench  level1.yaml  level2.yaml  lit.local.cfg  test-kernel-bench.py  test.py  test_kernel_bench.py  test_kernel_bench_xegpu.py  tests.yaml
examples/execution/: example.py
examples/feed-forward-mpi/: README.md  feed-forward-mpi.py  ff_weight_stationary.py  lit.local.cfg  memory_manager.py
examples/ingress/: convert-kernel-bench-to-mlir.py
examples/ingress/mlir_gen/: generate-linalg-3layer-mlp.sh  lit.local.cfg
examples/ingress/torch/: compile_model.py  lit.local.cfg  mlp_from_file.py  mlp_from_model.py
examples/llama/: lit.local.cfg  ref_model.py  test_llama3.py  torch_ingress.py
examples/mlir/: compile_and_run.py  memref_management.py
examples/mlp-mpi/: README.md  lit.local.cfg  mlp-mpi.py  mlp_weight_stationary.mlir  mlp_weight_stationary.py
examples/runtime/torch/: mlir_compile_model.py
examples/schedule/: lit.local.cfg  transform_a_payload_according_to_a_schedule.py  transform_a_payload_according_to_a_schedule.sh
examples/workload/: example.py  example_mlir.py
examples/xegpu/: README.md  csv_logger.py  enumerate_matmul_schedules.py  fused_attention.py  genetic_algorithm.py  kernel_bench.py  layer_norm.py  lit.local.cfg  llama3.py  llama3_payload.py  llama3_schedule.py  matmul.py  matmul_params.json  mlp.py  nanoGPT.py  nanoGPT_payload.py  nanoGPT_schedule.py  parameter_selector.py  softmax.py  torch_matmul.py  tune_matmul_costmodel.py  tune_matmul_ga.py  tune_matmul_gridsearch.py  tune_utils.py  xegpu_workload.py
examples/xegpu_matmul/: README.md  lit.local.cfg  matmul.py  mlp.py  payload.py  runner.py  schedule.py
examples/xegpu_mlp/: README.md  lit.local.cfg  mlp.py  parameter_selector.py
include/lighthouse-c/: Init.h
ingress/KernelBench/: convert-kernel-bench-to-mlir.py
ingress/Torch-MLIR/: convert-kernel-bench-to-mlir.py  generate-mlir.py  generate-mlir.sh  install-virtualenv.sh
ingress/mlir-gen/: generate-linalg-3layer-mlp.sh  install-virtualenv.sh
ingress/mlir-gen/mlir-gen/: __main__.py  einsum.py  main.py
ingress/mlir-gen/mlir_gen/: __main__.py  einsum.py  generic.py  main.py  named.py  utils.py
lib/CAPI/: CAPI.cpp  CMakeLists.txt
lighthouse/: __init__.py  workload.py
lighthouse/config/: config.py
lighthouse/dialects/: __init__.py  dialect_base.py  smt_ext.py  transform_ext.py  transform_smt_ext.py  transform_tune_ext.py
lighthouse/dialects/smt_ext/: __init__.py  dialect.py
lighthouse/execution/: __init__.py  debug.py  init.py  memory_manager.py  runner.py  target.py
lighthouse/ingress/: README.md  __init__.py
lighthouse/ingress/gpu/: __init__.py  gpu_utils.py  matmul.py  matmul_payload.py  mlp_payload.py
lighthouse/ingress/mlir_gen/: __init__.py  einsum.py  generic.py  gpu_attention_payload.py  gpu_fused_attention_payload.py  gpu_layer_norm_payload.py  gpu_matmul_payload.py  gpu_mlp_payload.py  gpu_nanoGPT_payload.py  gpu_softmax_payload.py  gpu_utils.py  main.py  named.py  shard_utils.py  utils.py
lighthouse/ingress/torch/: __init__.py  compile.py  importer.py
lighthouse/pipeline/: __init__.py  descriptor.py  driver.py  finder.py  helper.py  opt.py  pipeline.py  stage.py
lighthouse/pipeline/descriptors/: bufferization-cleanup.yaml  bufferization.yaml  linalg-to-loops.yaml  llvm_lowering.yaml  scalar-lowering.yaml
lighthouse/runtime/: __init__.py
lighthouse/runtime/torch/: __init__.py  jit.py
lighthouse/schedule/: __init__.py  bufferization.py  builders.py  common.py  debug.py  func.py  hoisting.py  linalg.py  omp.py  packing.py  pattern_schedule.py  tiling.py  utils.py  vectorization.py
lighthouse/schedule/x86/: __init__.py  amx_move_offsets.py  cache_tiling.py  pack_lowering.py  register_tiling.py  tile_and_vector_matmul.py
lighthouse/schedule/xegpu/: __init__.py  elemwise_schedule.py  fused_attention_schedule.py  layer_norm_schedule.py  lowering_common.py  matmul_constraints.py  matmul_costmodel.py  matmul_params.json  matmul_schedule.py  mlp_schedule.py  nanoGPT_schedule.py  softmax_schedule.py  xegpu_parameter_selector.py  xegpu_specs.py  xegpu_to_binary.py
lighthouse/transform/: __init__.py  __main__.py  cleanup.py  common.py  foreach.py  hoisting.py  linalg.py  matchers.py  packing.py  rewrite.py  tiling.py  vectorization.py
lighthouse/transform/x86/: __init__.py  cache_tiling.py
lighthouse/transforms/: packing.py  tiling.py  vectorization.py
lighthouse/tune/: __init__.py  __main__.py  annotate.py  enumerate.py  rewrite.py  trace.py
lighthouse/tune/smt/: __init__.py  z3.py
lighthouse/utils/: __init__.py  execution.py  importer.py  lib_finder.py  memref.py  mlir.py  numpy.py  runner.py  runtime_args.py  sys_config.py  torch.py  types.py
lighthouse/utils/runtime/: ffi.py  torch.py
lighthouse/workload/: __init__.py  memory_manager.py  runner.py  workload.py
lighthouse/workload/xegpu/: __init__.py
python/: CMakeLists.txt
python/examples/: generate_payload_and_schedule_and_apply_latter_to_former.py  lit.local.cfg
python/examples/ingress/: convert-kernel-bench-to-mlir.py
python/examples/workload/: example.py  (+1 more)
python/lighthouse/: __init__.py  workload.py
scripts/: check_yaml_filenames.py
scripts/KernelBench/: run_kernels.sh
test/: lit.local.cfg
test/dialects/: dialect_loading.py  transform_ext.py  transform_ext_subview.py
test/opt/: pipeline-check.mlir
test/pipeline/: find_pipeline.py
test/run/: pipeline-check.mlir
test/transform/: test_foreach.py  test_tile_size_ops.py
tools/: README.md  kernel-bench  kernel_bench  kernel_bench.yaml  lh-opt  lh-run  lh-transform  lh-tune
tools/lh-opt/: README.md  lh-opt  lh-opt.py
(+114 files in other folders)
