[project]
name = "lighthouse"
version = "0.1.0a1"
requires-python = ">=3.10,<3.13"  # Bounds are due to torch-mlir's packaging
dependencies = [
    "mlir-python-bindings==20251011+3af43e303",
]

[project.optional-dependencies]
# Additional "targets" which pull in optional dependencies -- use `uv sync --extra TARGET`
ingress_torch_cpu = [
    "torch==v2.8.0+cpu",
    "torch-mlir==20251003.589"
]
ingress_torch_nvidia = [
    "torch==2.8.0",  # Nvidia-enabled version of torch
    "torch-mlir==20251003.589"
]
ingress_torch_rocm = [
    "torch==2.8.0+rocm6.4",  # AMD-enabled version of torch
    "torch-mlir==20251003.589",
    "pytorch_triton_rocm"  # Transitive dependency listed explicitly so that we can state which package repository it is supposed to come from
]
ingress_torch_xpu = [
    "torch==2.8.0+xpu",  # Intel-enabled version of torch
    "torch-mlir==20251003.589",
    "pytorch_triton_xpu"  # Transitive dependency listed explicitly so that we can state which package repository it is supposed to come from
]

[tool.uv]
# Declare that the following "targets" are mutually exclusive of one another
conflicts = [
    [
        {extra = "ingress_torch_cpu" },
        {extra = "ingress_torch_nvidia" },
        {extra = "ingress_torch_rocm" },
        {extra = "ingress_torch_xpu" }
    ]
]

[tool.uv.sources]
# Bind packages to particular package repositories
mlir_python_bindings = { index = "eudsl" }
torch = { index = "pytorch" }
pytorch_triton_xpu = { index = "pytorch" }
pytorch_triton_rocm = { index = "pytorch" }
torch_mlir = { index = "torch_mlir" }

# The following are the different non-Pypi package repositories we depend on
[[tool.uv.index]]
name = "eudsl"
url = "https://llvm.github.io/eudsl"
explicit = true
format = "flat"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl"
explicit = true

[[tool.uv.index]]
name = "torch_mlir"
url = "https://github.com/llvm/torch-mlir-release/releases/expanded_assets/dev-wheels"
explicit = true

[tool.setuptools.packages.find]
where = ["python"]
include = ["lighthouse*"]
